# keycloak-wasm-policy-provider

./: .gitignore  README.md  pom.xml
kc-dev/data/import/: realms.json
src/main/java/: Main.java
src/main/java/org/example/: Main.java
src/main/java/org/keycloak/authorization/policy/: WasmPolicyProvider.java  WasmPolicyProviderFactory.java  WasmPolicyRepresentation.java
src/main/resources/rust/abac/: Cargo.toml  abac.rs  build.sh
src/main/resources/rust/rbac/: Cargo.toml  build.sh  rbac.rs
src/main/resources/wasm/: abac.wasm  rbac.wasm
